# pawnder

./: .gitignore  LICENSE  README.md  main.py  main2.py  main_final.py  main_principal.py  pyproject.toml
.devcontainer/: devcontainer.json
models/: fee_bins.pkl  fee_bins_u.pkl  mean_embedding.npy  pca_200.pkl
pipelines/: image.py  tabular.py  text.py
utils/: inference.py
